feat: :zap: working on course

--- a/index.html
+++ b/index.html
@@ -74,24 +74,26 @@
         </div>
         <div class="content-1 course-1">
             <div class="description-course">
-                <h4>Fitness online Get efficient workouts at home</h4>
+                <h4>Fitness online <br/> Get efficient workouts at home</h4>
                 <p>Getting fit isn't meant to be a struggle. In case it's hard for you to committing regular gym sessions,
                      'GO zone' offers an online community that is hosted on Facebook, within which you can access a 
                      range of amazing fitness goodies like home workouts, live workout sessions, online support, and various
                       tips and advice. Join our online fitness community today.
                 </p>
                 <ul class="detail-course">
-                    <li>Price: $30 per month</li>
+                    <li> Price: $30 per month</li>
                     <li>8 workouts per month</li>
                     <li>Days & hours: customizable</li>
-                    <li>Duration: 1.5 hour per training</li>
+                    <li>
+                        Duration: 1.5 hour per training
+                    </li>
                 </ul>
                 <div class="button-course">
                     <button>Contact us</button>
                 </div>
             </div>
             <div class="image-course">
-                <img src = "/assets/imgs/img6.jpg" alt = "course-1" />
+              
             </div>
         </div>
     </div>
