feat: :lipstick: done course 2 of content

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Template</title>
     <link rel="icon" href="./assets/favicon/favicon1.ico">
-    <link rel="stylesheet" href="/assets/fonts/themify-icons/themify-icons.css">
+    <link rel="stylesheet" href="./assets/icons/themify-icons/themify-icons.css">
     <!-- <link rel="stylesheet" href="https://kit.fontawesome.com/e23e9f255c.js" crossorigin="anonymous"> -->
 
     <!-- <link rel="stylesheet" href="./assets/fonts/Poppins/OFL.txt"> -->
@@ -73,18 +73,25 @@
             </div>
         </div>
         <div class="content-1 course-1">
-            <div class="description-course">
+            <div class="description-course-1">
                 <h4>Fitness online <br/> Get efficient workouts at home</h4>
                 <p>Getting fit isn't meant to be a struggle. In case it's hard for you to committing regular gym sessions,
                      'GO zone' offers an online community that is hosted on Facebook, within which you can access a 
                      range of amazing fitness goodies like home workouts, live workout sessions, online support, and various
                       tips and advice. Join our online fitness community today.
                 </p>
-                <ul class="detail-course">
-                    <li> Price: $30 per month</li>
-                    <li>8 workouts per month</li>
-                    <li>Days & hours: customizable</li>
+                <ul class="detail-course-1">
                     <li>
+                        <i class="ti-money"></i>
+                         Price: $30 per month</li>
+                    <li>
+                        <i class="ti-check"></i>
+                        8 workouts per month</li>
+                    <li>
+                        <i class="ti-calendar"></i>
+                        Days & hours: customizable</li>
+                    <li>
+                        <i class="ti-time"></i>
                         Duration: 1.5 hour per training
                     </li>
                 </ul>
@@ -92,8 +99,49 @@
                     <button>Contact us</button>
                 </div>
             </div>
-            <div class="image-course">
+            <div class="image-course-1">
               
+            </div>
+
+        </div>
+        <div class="content-2 content-2_heading">
+            <h4>Push your limits forward !</h4>
+        </div>
+        <div class="content-2 course-2">
+            <div class="image-course-2">
+                <img src = "./assets/imgs/img5.jpg" alt = "img-5">
+                <img src = "./assets/imgs/img11.jpg" alt = "img-11">
+                <img src = "./assets/imgs/img7.jpg" alt = "img-7">
+                <img src = "./assets/imgs/img12.jpg" alt = "img-12">
+            </div>
+            <div class="description-course">
+                <h4>Yoga and stretching</h4>
+                <p>GO fitness zone is working with yoga expert Cindy Meberly to bring you months of yoga
+                     and mindfulness workshops. Our group stretching and yoga body-therapy sessions will 
+                     improve your flexibility by increasing the range of motion. Our sessions are focused
+                      on gaining a sense of renewal and awakening, relaxing, and relieving stress.
+                </p>
+                <div class = 'button-course'>
+                    <button >Contact us</button>
+                </div>
+                <ul class="detail-course-2">
+                    <li>
+                        <div class="heading-detail">
+                            <i class="ti-money"></i>
+                            <h3>Price</h3>
+                        </div>
+                        <p>$45 per month</p>
+                        <p>$5 per session</p>
+                    </li>
+                    <li>
+                        <div class="heading-detail">
+                            <i class="ti-calendar"></i>
+                            <h3>Timetable</h3>
+                        </div>
+                        <p>Tuesday, Thursday</p>
+                        <p>7:30pm - 8:30pm</p>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
