feat: :zap: done content 4 of page: owner and coach

--- a/index.html
+++ b/index.html
@@ -185,6 +185,31 @@
                 </li>
             </ul>
         </div>
+        <h4 class = "title-content-4">Owner and coach</h4>
+        <div class="content-4">
+            <div class="content-image">
+                <img src = "./assets/imgs/img8.jpg" alt = "img" />
+                <div class="box-content">
+                    <p>Fall in love with the process and the results will come.</p>
+                    <h4>Verica Christensen</h4>
+                </div>
+            </div>
+            <div class="content-text">
+                <p>
+                    Salut beautiful! I am Verica - owner and qualified personal coach at Girls Only fitness zone.
+                     I've been teaching fitness since 2007. I teach TRX , meta fit , body pump, lower body and breakletics. 
+                     I am also a qualified level 3 at sports massage therapist.
+                </p>
+                <p>
+                    I feel really lucky that I come to work everyday to do a job I love – helping and encouraging women to 
+                    look after their health and well-being, as well as being surrounded by a great team and members here at GO fitness zone.
+                </p>
+                <p>
+                    Remember, girls - fitness is not a destination!
+                    It is our way of life. Take care of your body by working out regularly, as it's the only place you have to live in!
+                </p>
+            </div>
+        </div>
     </div>
     
 </body>
