feat: :zap: working on content-5 of page

--- a/index.html
+++ b/index.html
@@ -210,6 +210,118 @@
                 </p>
             </div>
         </div>
+        <div class="content-5">
+            <div class="title-description">
+                <h4 class="title-content">
+                    Fitness packages
+                </h4>
+                <p class="description-content">
+                    Whether you need a single workout or you're looking for a long-term training, 
+                    you will find it all here. Join us and give your body the best form !
+                </p>
+            </div>
+            <ul class="list-training">
+                <li>
+                    <div class="top-content">
+                        <div class="polygon-box">
+                            <p>$13</p>
+                            <p>per visit</p>
+                        </div>
+                        <h2>One-day training</h2>
+                    </div>
+                    <div class="bottom-content">
+                        <ul class="detail-training">
+                            <li>
+                                <p>
+                                    One day fitness trainer
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    One time access to body pump, lower body, spinning, TRX and breakletics trainings
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    Fitness orientation advice
+                                </p>
+                            </li>
+                        </ul>
+                        <div class="content-5-button_1">
+                            <button>Join today</button>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="top-content">
+                        <div class="polygon-box">
+                            <p>$45</p>
+                            <p>per month</p>
+                        </div>
+                        <h2>Group training</h2>
+                    </div>
+                    <div class="bottom-content">
+                        <ul class="detail-training">
+                            <li>
+                                <p>
+                                    Fitness trainings 3x week
+                                </p>
+                            </li>
+                            <li>
+                                <p>TRX trainings 2x week</p>
+                            </li>
+                            <li>
+                                <p>
+                                    Lower body and spinning trainings 2x week
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    Breakletics 2x week
+                                </p>
+                            </li>
+                        </ul>
+                        <div class="content-5-button_2">
+                            <button>Join today</button>                        
+                    </div>
+                </li>
+                <li>
+                    <div class="top-content">
+                        <div class="polygon-box">
+                            <p>$75</p>
+                            <p>per month</p>
+                        </div>
+                        <h2>Personal training</h2>
+                    </div>
+                    <div class="bottom-content">
+                        <ul class="detail-training">
+                            <li>
+                                <p>
+                                    Personalized workout plan
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    Nutrition guidance
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    Fitness trainings 3x week
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    Unlimited visits to all groups
+                                </p>
+                            </li>
+                        </ul>
+                        <div class="content-5-button_3">
+                            <button>Join today</button>                        
+                    </div>
+                </li>
+            </ul>
+        </div>
     </div>
     
 </body>
