feat: :zap: working on form contact

--- a/index.html
+++ b/index.html
@@ -373,10 +373,10 @@
                 <p>
                     2 Bodieve Farm Cottage, Wadebridge, Cornwall, UK
                 </p>
-                <p> 
+                <p class="tel-number"> 
                     Tel: 0120 8813 082
                 </p>
-                <p>
+                <p style = "font-size: 19px;">
                     Follow our trainings on: 
                 </p>
                 <p>
