feat: :sparkles: finished build base webpage

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <ul class="nav-1">
                 <li>
                     <a>
-                        <img src = "./assets/imgs/logo.png" alt = "logo">
+                        <img src = "./assets/imgs/logo-1.png" alt = "logo">
                     </a>
                 </li>
             </ul>
@@ -59,7 +59,7 @@
                         <div class="content-slider_dot dot-2"></div>
                         <div class="content-slider_dot dot-3"></div>
                     </li>
-                </ul>
+                </ul> 
             </div>
             <div class="next-button">
                 <i class = 'ti-arrow-circle-right'></i>
@@ -224,8 +224,8 @@
                 <li>
                     <div class="li-wrapper">
                         <div class="top-content">
-                            <div class="polygon-box">
-                                <div style = "padding: 20px 20px 70px">
+                            <div class="polygon-box-wrapper">
+                                <div  class = "polygon-box">
                                     <p style = "font-size: 33px; font-weight: bold">$13</p>
                                     <p>per visit</p>
                                 </div>
@@ -235,17 +235,26 @@
                         </div>
                         <div class="bottom-content">
                             <ul class="detail-training">
-                                <li>
+                                <li class="first-li">
+                                    <div class="dot-p">
+
+                                    </div>
                                     <p>
                                         One day fitness trainer
                                     </p>
                                 </li>
                                 <li>
+                                    <div class="dot-p">
+
+                                    </div>
                                     <p>
                                         One time access to body pump, lower body, spinning, TRX and breakletics trainings
                                     </p>
                                 </li>
                                 <li>
+                                    <div class="dot-p">
+
+                                    </div>
                                     <p>
                                         Fitness orientation advice
                                     </p>
@@ -260,8 +269,8 @@
                 <li>
                     <div class="li-wrapper li-box-2">
                         <div class="top-content top-content-box-2">
-                            <div class="polygon-box polygon-box-2">
-                                <div style = "padding: 20px 20px 70px">
+                            <div class="polygon-box-wrapper-2 ">
+                                <div class = "polygon-box polygon-box-2" >
                                     <p style = "font-size: 33px; font-weight: bold">$45</p>
                                     <p>per month</p>
                                 </div>
@@ -271,20 +280,32 @@
                         </div>
                         <div class="bottom-content">
                             <ul class="detail-training">
-                                <li>
+                                <li class="first-li">
+                                    <div class="dot-p">
+
+                                    </div>
                                     <p>
                                         Fitness trainings 3x week
                                     </p>
                                 </li>
                                 <li>
+                                    <div class="dot-p">
+
+                                    </div>
                                     <p>TRX trainings 2x week</p>
                                 </li>
                                 <li>
+                                    <div class="dot-p">
+
+                                    </div>
                                     <p>
                                         Lower body and spinning trainings 2x week
                                     </p>
                                 </li>
                                 <li>
+                                    <div class="dot-p">
+
+                                    </div>
                                     <p>
                                         Breakletics 2x week
                                     </p>
@@ -298,8 +319,8 @@
                 <li>
                     <div class="li-wrapper">
                         <div class="top-content ">
-                            <div class="polygon-box">
-                                <div style = "padding: 20px 20px 70px">
+                            <div class="polygon-box-wrapper">
+                                <div class = "polygon-box" >
                                     <p style = "font-size: 33px; font-weight: bold">$75</p>
                                     <p>per month</p>
                                 </div>
@@ -309,22 +330,34 @@
                         </div>
                         <div class="bottom-content">
                             <ul class="detail-training">
-                                <li>
+                                <li class="first-li">
+                                    <div class="dot-p">
+
+                                    </div>
                                     <p>
                                         Personalized workout plan
                                     </p>
                                 </li>
                                 <li>
+                                    <div class="dot-p">
+
+                                    </div>
                                     <p>
                                         Nutrition guidance
                                     </p>
                                 </li>
                                 <li>
+                                    <div class="dot-p">
+
+                                    </div>
                                     <p>
                                         Fitness trainings 3x week
                                     </p>
                                 </li>
                                 <li>
+                                    <div class="dot-p">
+
+                                    </div>
                                     <p>
                                         Unlimited visits to all groups
                                     </p>
@@ -347,7 +380,7 @@
                 <div class="box-content-description">
                     <div class="box-content">
                         <div class="icon-text">
-
+                            <i class =" ti-quote-left"></i>
                         </div>
                         <h2>
                             Mila Fenez / Personal trainings with Adrienne
@@ -394,8 +427,13 @@
                 <p style = "font-size: 19px;">
                     Follow our trainings on: 
                 </p>
-                <p>
-
+                <p style="margin-top: 20px; margin-left: -10px">
+                    <a href="#">
+                        <i class="ti-facebook"></i>
+                    </a>
+                    <a href="#">
+                        <i class="ti-instagram"></i>
+                    </a>
                 </p>
             </div>
             <div class="form-contact">
@@ -403,15 +441,15 @@
                     <div class="get-inform">
                         <div class="get-name">
                             <input type = "text" placeholder = "Your name*" />
-                            
+                            <div style = "font-weight: 598; font-size: 19px; margin-top: 16px; margin-left: -32px;">*</div>
                         </div>
                         <div class="get-email">
                             <input type = 'text' placeholder="Your Email*" />
-
+                            <div style = "font-weight: 598; font-size: 19px; margin-top: 16px; margin-left: -32px;">*</div>
                         </div>
                         <div class="content-form">
-                            <input type = "text" placeholder="Training you want to join..." />
-
+                            <!-- <input type = "box" style="" placeholder="Training you want to join..." /> -->
+                            <textarea name="message" placeholder="Training you want to join..."></textarea>
                         </div>
                     </div>
                     <div class="send-form-btn">
@@ -424,33 +462,43 @@
             <div class="content-footer">
                 <ul class="nav-footer">
                     <li>
-                        Fitness packages
+                        <a href = "#">
+                                                    Fitness packages
+                        </a>
                     </li>
                     <li>
-                        Fitness online
+                        <a href = "#">
+                                                    Fitness online
+                        </a>
                     </li>
                     <li>
-                        Yoga & stretch
+                        <a href = "#">
+                                                    Yoga & stretch
+                        </a>
                     </li>
                     <li>
-                        Instructors
+                        <a href = "#">
+                                                    Instructors
+                        </a>
                     </li>
                     <li>
-                        Contacts
+                        <a href = "#">
+                                                    Contacts
+                        </a>
                     </li>
                 </ul>
                 <ul class="get-notified">
                     <li>
-                        <div class="icon-footer">
+                        <div class="logo-footer">
 
                         </div>
                     </li>
                     <li>
-                        <p>
+                        <p style = "padding-left: 500px;">
                             Don't miss out special offers !
                         </p>
                     </li>
-                    <li>
+                    <li style="margin-right: 200px">
                         <input type = "text" placeholder="Enter your email" />
                         <button class = "get-notified-btn" >
                             Get notified
@@ -462,7 +510,15 @@
                 <p>
                     GO fitness zone  © 2022
                 </p>
-
+                <div class="icon" >
+                    <a href="#">
+                        <i class="ti-facebook"></i>
+                    </a>
+                    <a href="#">
+                        <i class="ti-instagram"></i>
+                    </a>
+                   
+                </div>
             </div>
         </div>
     </div>
