--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <!-- <link rel="stylesheet" href="https://kit.fontawesome.com/e23e9f255c.js" crossorigin="anonymous"> -->
 
     <!-- <link rel="stylesheet" href="./assets/fonts/Poppins/OFL.txt"> -->
-    <link href="http://fonts.googleapis.com/css?family=Poppins" rel="stylesheet" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/styles.css">
 
 </head>
@@ -538,11 +540,18 @@
                         </p>
                     </li>
                     <li style="margin-right: 200px">
-                        <input type = "text" placeholder="Enter your email" />
+                        <input class = "email-notified" type = "text" placeholder="Enter your email" />
+                        
                         <button class = "get-notified-btn" >
                             Get notified
                         </button>
+                        <div class="alert-empty_inputEmail" style = "margin-top: 8px;" >
+                            <i class="ti-alert">
+                                This field cannot be empty
+                            </i>
+                        </div>
                     </li>
+                    
                 </ul>
             </div>
             <div class="icon-footer">
